# api/swagger/swagger.yaml
@@ -1,9 +1,9 @@
 swagger: "2.0"
 info:
   version: "0.0.1"
-  title: Hello World App
+  title: Sport Energy API
 # during dev, should point to your local machine
-host: localhost:10010
+host: 127.0.0.1:10011
 # basePath prefixes all resource paths 
 basePath: /
 # 
@@ -18,17 +18,27 @@ consumes:
 produces:
   - application/json
 paths:
-  /hello:
+  /sportLeader/api/v1:
     # binds a127 app logic to a route
-    x-swagger-router-controller: hello_world
+    x-swagger-router-controller: sportEnergyAccountController
     get:
-      description: Returns 'Hello' to the caller
+      description: Returns sport leader information to the caller
       # used as the method name of the controller
-      operationId: hello
+      operationId: read_sportEnergyAccount
       parameters:
         - name: name
           in: query
-          description: The name of the person to whom to say hello
+          description: The name of the sport leader
+          required: false
+          type: string
+        - name: profile
+          in: query
+          description: The profile of the sport leader
+          required: false
+          type: string
+        - name: tel
+          in: query
+          description: The mobile number of the sport leader
           required: false
           type: string
       responses:
@@ -36,21 +46,89 @@ paths:
           description: Success
           schema:
             # a pointer to a definition
-            $ref: "#/definitions/HelloWorldResponse"
+            $ref: "#/definitions/SportLeaderResponse"
         # responses may fall through to errors
         default:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
-  /swagger:
+    post:
+      description: Add sport leader information
+      operationId: create_sportEnergyAccount
+      parameters:
+        - in: body
+          name: body
+          description: Sport leader object to be created
+          required: true
+          schema:
+            $ref: '#/definitions/SportLeaderResponse2'
+      responses:
+        "200":
+          description: Success
+          schema:
+            # a pointer to a definition
+            $ref: "#/definitions/SportLeaderResponse"
+        # responses may fall through to errors
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+    put:
+      description: Update sport leader information
+      operationId: update_sportEnergyAccount
+      parameters:
+        - in: query
+          name: profile
+          description: The profile of the sport leader
+          required: true
+          type: string
+        - in: body
+          name: body
+          description: Sport leader object to be updated
+          required: true
+          schema:
+            $ref: '#/definitions/SportLeaderResponse2'
+      responses:
+        400:
+          description: Invalid user supplied
+    delete:
+      description: Delete sport leader information
+      operationId: delete_sportEnergyAccount
+      parameters:
+        - in: query
+          name: profile
+          description: The profile of the sport leader to be deleted
+          required: true
+          type: string
+      responses:
+        400:
+          description: Invalid user supplied
+  /sportLeader/swagger:
     x-swagger-pipe: swagger_raw
 # complex objects have schema definitions
 definitions:
-  HelloWorldResponse:
+  SportLeaderResponse2:
+    type: object
     required:
-      - message
+    - name
+    - profile
     properties:
-      message:
+      name:
+        type: string
+        example: "Ruohong Fan"
+      profile:
+        type: string
+        example: "RFAN27"
+      tel:
+        type: string
+        example: "12345678"
+    xml:
+      name: SportLeaderResponse
+  SportLeaderResponse:
+    required:
+      - name
+    properties:
+      name:
         type: string
   ErrorResponse:
     required:
