# app.js
@@ -1,12 +1,30 @@
-'use strict';
+//'use strict';
 
-var SwaggerExpress = require('swagger-express-mw');
-var app = require('express')();
+var SwaggerExpress = require('swagger-express-mw'),
+  app = require('express')(),
+  cors = require('cors'),
+  bodyParser = require('body-parser');
+
 module.exports = app; // for testing
 
 var config = {
   appRoot: __dirname // required config
 };
+
+//enable all cors requests
+app.use(cors());
+
+app.use(bodyParser.urlencoded({ extended: true }));
+app.use(bodyParser.json());
+
+//created model loading here
+var sportLeaderAccount = require('./api/models/sportEnergyAccountModel');
+var sportLeaderTransaction = require('./api/models/sportEnergyTransactionModel');
+
+//importing route
+var routes = require('./api/routes/sportEnergyRoute');
+//register the route
+routes(app);
 
 SwaggerExpress.create(config, function(err, swaggerExpress) {
   if (err) { throw err; }
@@ -14,10 +32,8 @@ SwaggerExpress.create(config, function(err, swaggerExpress) {
   // install middleware
   swaggerExpress.register(app);
 
-  var port = process.env.PORT || 10010;
+  var port = process.env.PORT || 10011;
   app.listen(port);
 
-  if (swaggerExpress.runner.swagger.paths['/hello']) {
-    console.log('try this:\ncurl http://127.0.0.1:' + port + '/hello?name=Scott');
-  }
+  console.log('My RESTful API server started on: ' + port);
 });
